--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "docker-run": "docker-compose up",
-    "docker-stop": "docker-compose stop"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
